# aoc24

./: README.md  pyproject.toml
aoc24/: utils.py
aoc24/day1/: main.py
aoc24/day2/: main.py
aoc24/day3/: main.py
