[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = ""
authors = ["Amin Beigi <me@aminbeigi.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^25.1.0"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
